<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DinnerPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="welcome_letter">Welcome to Dinner Planner!\n\nHere you will be able to easily plan your dinner.\n\nOn the next page start by selecting number of participants.
Then select your courses.\n\nWatch Magic Happen!</string>
    <string name="hello_world">Hello world!</string>
    <string name="number_of_guests">Participants</string>
    <string name="total">Total Cost         </string>
    <string name="menu">Customize your menu</string>
    <string name="starter">Starter</string>
    <string name="main">main</string>
    <string name="title_activity_choose_menu">ChooseMenuActivity</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="receipe">Turn on the oven at 150C\n Carve bread\n Put tomato and cheese on bread\n Place in oven for 10min\n</string>
    <string name="total_number"></string>
    <string name="SEK">SEK</string>
    <string name="total_cost_value">999</string>
    <string name="main_course">Main Course</string>
    <string name="dessert">Dessert</string>
    <string name="create_button">Create</string>
    <string name="back_button">Back</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="desc"></string>
    <string name="disk1">Meat Ball</string>
    <string name="disk2">Toast</string>
    <string name="disk3">Ice Cream</string>
    

</resources>
