<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_summary_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SummaryActivity" >

     

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/back_button" 
            android:onClick="backToChooseMenu"/>

         <TextView
            android:id="@id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" 
            android:layout_toLeftOf="@id/total_cost"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@id/total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/SEK"
            android:text="@string/total_cost_value"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:padding="5dp"/>

        <TextView
            android:id="@id/SEK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SEK"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingTop="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/Instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:text="@string/instructions"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_toRightOf="@id/Ingredients"/>
        
  </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btn_ingredient"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/desc"
            android:padding="5dp"
            android:paddingRight="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/ingredients" />

        <ImageButton
            android:id="@+id/btn_dish1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/btn_ingredient"
            android:contentDescription="@string/desc"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/meatballs" />

        <ImageButton
            android:id="@+id/btn_dish2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/btn_dish1"
            android:contentDescription="@string/desc"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/toast" />

        <ImageButton
            android:id="@+id/btn_dish3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/btn_dish2"
            android:contentDescription="@string/desc"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icecream" />
        
         <TextView
            android:id="@+id/dish1_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/btn_dish1"
            android:layout_marginLeft="-5dp"
            android:text="@string/disk1"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:layout_below="@id/btn_dish1"/>

        <TextView
            android:id="@+id/dish2_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dish1_caption"
            android:layout_marginLeft="10dp"
            android:text="@string/disk2"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:layout_below="@id/btn_dish2"/>

        <TextView
            android:id="@+id/dish3_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dish2_caption"
           
            android:layout_marginLeft="10dp"
            android:text="@string/disk3"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:layout_below="@id/btn_dish3"/>


    </RelativeLayout>

     

    <RelativeLayout
        android:id="@+id/instruction_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dish_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starter"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/dish_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dish_type_title"
            android:text="@string/disk2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/receipe_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dish_name_title"
            android:text="@string/receipe" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ingredient_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/ingredients"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_below="@id/TextView04" >

            <TableLayout
                android:id="@+id/tableIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="dummy" />

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="dummy dummy dummy" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="dummy dummy dummy " />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>
            </TableLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>